--- a/client/src/pages/register/Register.scss
+++ b/client/src/pages/register/Register.scss
@@ -28,7 +28,7 @@
       }
 
       input,
-      textarea {
+      textarea, select{
         padding: 20px;
         border: 1px solid rgb(216, 214, 214);
       }
